<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
        android:title="@string/pref_header_image_processor_basic">

        <ListPreference
            android:defaultValue="BW"
            android:entries="@array/pref_list_image_processing_basic_mode"
            android:entryValues="@array/pref_list_image_processing_basic_mode_values"
            android:key="pref_key_image_processing_basic_mode"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="BW"
            android:title="@string/pref_title_image_processing_basic_mode"
            tools:summary="%s" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_key_image_processing_auto_crop"
            android:title="@string/pref_title_image_processing_auto_crop" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_key_image_processing_auto_rotate"
            android:title="@string/pref_title_image_processing_auto_rotate" />

         <ListPreference
             android:defaultValue="None"
             android:entries="@array/pref_list_deskew_type_basic_mode"
             android:entryValues="@array/pref_list_deskew_type_basic_mode_values"
             android:key="pref_key_deskew_type_basic_mode"
             android:negativeButtonText="@null"
             android:positiveButtonText="@null"
             android:summary="None"
             android:title="@string/pref_title_deskew_type_basic_mode"
             tools:summary="%s" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_image_processor_advanced">

        <ListPreference
            android:defaultValue="200"
            android:entries="@array/pref_list_image_processing_scale"
            android:entryValues="@array/pref_list_image_processing_scale_values"
            android:key="pref_key_image_processing_scale"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="200 dpi"
            android:title="@string/pref_title_image_processing_scale"
            tools:summary="%s dpi" />

    </PreferenceCategory>

</PreferenceScreen>