<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_settings"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/menu_option_settings_title"
        android:visible="true"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menu_item_lic_agreement"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/menu_option_lic_agreement_title"
        android:visible="true"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menu_item_about"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/menu_option_about_title"
        android:visible="true"
        app:showAsAction="collapseActionView" />


</menu>